--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
     <properties>
         <lucene.version>7.7.3</lucene.version>
+        <elasticsearch.version>7.17.12</elasticsearch.version>
         <pinyin4j.version>2.5.1</pinyin4j.version>
         <slf4j.version>2.0.7</slf4j.version>
         <log4j.version>2.20.0</log4j.version>
@@ -75,6 +76,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- Elasticsearch7.x -->
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>${elasticsearch.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.belerweb</groupId>
             <artifactId>pinyin4j</artifactId>
