--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,13 @@
 
     <properties>
         <lucene.version>7.7.3</lucene.version>
-        <elasticsearch.version>7.17.12</elasticsearch.version>
         <pinyin4j.version>2.5.1</pinyin4j.version>
         <slf4j.version>2.0.7</slf4j.version>
         <log4j.version>2.20.0</log4j.version>
     </properties>
 
     <dependencies>
+        <!-- solr-core -->
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-core</artifactId>
@@ -77,14 +77,7 @@
             </exclusions>
         </dependency>
 
-        <!-- Elasticsearch7.x -->
-        <dependency>
-            <groupId>org.elasticsearch</groupId>
-            <artifactId>elasticsearch</artifactId>
-            <version>${elasticsearch.version}</version>
-            <scope>compile</scope>
-        </dependency>
-
+        <!-- Pinyin4j -->
         <dependency>
             <groupId>com.belerweb</groupId>
             <artifactId>pinyin4j</artifactId>
@@ -102,7 +95,6 @@
             <artifactId>log4j-core</artifactId>
             <version>${log4j.version}</version>
         </dependency>
-
     </dependencies>
 
 </project>
