--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>groupId</groupId>
+    <groupId>org.wltea.analyzer</groupId>
     <artifactId>IK</artifactId>
     <version>1.0</version>
+
+    <properties>
+        <lucene.version>8.11.2</lucene.version>
+        <elasticsearch.version>7.17.12</elasticsearch.version>
+        <pinyin4j.version>2.5.1</pinyin4j.version>
+        <slf4j.version>2.0.7</slf4j.version>
+        <log4j.version>2.20.0</log4j.version>
+    </properties>
+
     <build>
+        <finalName>IK</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -19,14 +28,6 @@
             </plugin>
         </plugins>
     </build>
-
-    <properties>
-        <lucene.version>7.7.3</lucene.version>
-        <elasticsearch.version>7.17.12</elasticsearch.version>
-        <pinyin4j.version>2.5.1</pinyin4j.version>
-        <slf4j.version>2.0.7</slf4j.version>
-        <log4j.version>2.20.0</log4j.version>
-    </properties>
 
     <dependencies>
         <dependency>
