--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
             <id>ossrh</id>
             <name>Release</name>
             <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+
         </repository>
     </distributionManagement>
 
@@ -132,6 +133,17 @@
                 <configuration>
                     <tagNameFormat>v@{project.version}</tagNameFormat>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <releaseProfiles>releases</releaseProfiles>
+                    <useReleaseProfile>false</useReleaseProfile>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
